# dioxus-web-demo

./: Cargo.toml  Dioxus.toml  build.sh
.cargo/: config.toml
public/: tailwind.css
src/: comment.rs  fetch_hacker_news.rs  main.rs  story.rs
